fix: time toggle menu vertical align on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -442,18 +442,18 @@ input[type=submit] {
 .header__time-toggle {
   display: flex;
   justify-content: space-around;
-  margin: 0rem 1rem 1.5rem;
+  align-content: space-between;
+  margin: 1rem;
   width: 100%;
-  height: 115px;
   /* mixin mq */
   /* end mixin mq */
 }
 @media screen and (min-width: 800px) {
   .header__time-toggle {
+    height: 115px;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: space-between;
-    margin-left: 1.8rem;
+    margin: 0rem 1rem 1.5rem 1.8rem;
     align-self: flex-end;
   }
 }
