--- a/scss/components/_time-toggle.scss
+++ b/scss/components/_time-toggle.scss
@@ -7,15 +7,15 @@
 .header__time-toggle {
   display: flex;
   justify-content: space-around;
-  margin: 0rem 1rem 1.5rem;
+  align-content: space-between;
+  margin: 1rem;
   width: 100%;
-  height: 115px;
 
   @include mq($desktop-width, up) {
+    height: 115px;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: space-between;
-    margin-left: 1.8rem;
+    margin: 0rem 1rem 1.5rem 1.8rem;
     align-self: flex-end;
   }
 }
